# kingdoms

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.txt
assets/: farmer.blend
engine/include/: button.hpp  image.hpp  math.hpp  scene.hpp
engine/src/: CMakeLists.txt  button.cpp  image.cpp  math.cpp  scene.cpp
include/: base.hpp  battle.hpp  building.hpp  colours.hpp  farmhouse.hpp  grid.hpp  kingdoms.h  object.hpp  person.hpp  resource_animation.hpp  resource_building.hpp  screen.hpp  sdl2.hpp  sdl_main.hpp  tile.hpp
src/: CMakeLists.txt  base.cpp  battle.cpp  farmhouse.cpp  grid.cpp  main.cpp  object.cpp  person.cpp  resource_animation.cpp  resource_building.cpp  screen.cpp  sdl2.cpp
